--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -44,6 +44,13 @@
     cursor: pointer;
 }
 
+.formContainer .link{
+    margin-top: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (max-width: 400px){
     .container{
         width: 100%;
